--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,3 +27,21 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: auth
+  
+  gateway:
+    build:
+      dockerfile: ./gateway/Dockerfile
+    ports:
+      - 8080:8080
+    depends_on:
+      - auth
+    restart: always
+
+  auth:
+    build: 
+      dockerfile: ./auth/Dockerfile
+    ports:
+      - 8081:8081
+    depends_on:
+      - postgres
+    restart: always
