--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
   #     - CASSANDRA_PASSWORD=password
   #   tmpfs:
   #     - /var/lib/cassandra/
-  postgres:
+  authdb:
     image: postgres:alpine
     ports:
       - 5432:5432
@@ -37,11 +37,31 @@ services:
       - auth
     restart: always
 
+  counterdb:
+    image: postgres:alpine
+    ports:
+      - 5433:5433
+    tmpfs: /var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: counter
+    command: -p 5433
+  
   auth:
     build: 
       dockerfile: ./auth/Dockerfile
     ports:
       - 8081:8081
     depends_on:
-      - postgres
+      - authdb
+    restart: always
+
+  counter:
+    build: 
+      dockerfile: ./counter/Dockerfile
+    ports:
+      - 8082:8082
+    depends_on:
+      - counterdb
     restart: always
