--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
 services:
-  # rabbitmq:
-  #   image: rabbitmq:3.13-management-alpine
-  #   container_name: 'rabbitmq'
-  #   ports:
-  #     - 5672:5672
-  #     - 15672:15672 #ui
-  #   tmpfs:
-  #     - /var/lib/rabbitmq/
-  #     - /var/log/rabbitmq 
+  rabbitmq:
+    image: rabbitmq:3.13-management-alpine
+    container_name: 'rabbitmq'
+    ports:
+      - 5672:5672
+      - 15672:15672 #ui
+    tmpfs:
+      - /var/lib/rabbitmq/
+      - /var/log/rabbitmq 
   # cassandra:
   #   image: cassandra:latest
   #   container_name: cassandradb
